--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "scripts": {
     "build:dev": "webpack --config webpack-config.js",
     "build-watch": "webpack --config webpack-config.js --watch"
+    "build": "webpack --config webpack-config.js --mode production"
   },
   "dependencies": {
     "@feature-hub/async-ssr-manager": "^3.6.0",
