--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   ],
   "scripts": {
     "build:dev": "webpack --config webpack-config.js",
-    "build-watch": "webpack --config webpack-config.js --watch"
+    "build-watch": "webpack --config webpack-config.js --watch",
     "build": "webpack --config webpack-config.js --mode production"
   },
   "dependencies": {
