--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-name: AzureStaticWebAppDeployment
+yname: AzureStaticWebAppDeployment
 
 on:
   push:
     branches:
-      - 
+      - deploy
 env:
   # GITHUB_USER_NAME: ${{ secrets.USER_NAME }}
   AZURE_LOCATION: "westus2"
