--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,9 +1,9 @@
-yname: AzureStaticWebAppDeployment
+name: AzureStaticWebAppDeployment
 
 on:
   push:
     branches:
-      - deploy
+      - main
 env:
   # GITHUB_USER_NAME: ${{ secrets.USER_NAME }}
   AZURE_LOCATION: "westus2"
@@ -56,7 +56,7 @@ jobs:
             --source "https://github.com/${{ github.repository_owner }}/${{ steps.repo_name.outputs.name }}" \
             --location ${{ env.AZURE_LOCATION }} \
             --branch main \
-            --app-location "dist" \
+            --app-location "/" \
             --output-location "dist"  \
             --login-with-github
 
