changed the container name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,9 +52,9 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az storage account create --name mfsstorage --resource-group ${{ steps.create_resource_group.outputs.resource_group_name }} --location ${{ env.AZURE_LOCATION }} --sku Standard_LRS
-            az storage container create --account-name mfsstorage --name mfcontainer --public-access blob
-            az storage blob upload-batch --account-name mfsstorage --destination mfcontainer --source dist --output none --set-permission blob
+            az storage account create --name mfstorage --resource-group ${{ steps.create_resource_group.outputs.resource_group_name }} --location ${{ env.AZURE_LOCATION }} --sku Standard_LRS
+            az storage container create --account-name mfstorage --name mfcontainer --public-access blob
+            az storage blob upload-batch --account-name mfstorage --destination mfcontainer --source dist --output none --set-permission blob
         
 
       - name: Configure CDN Endpoint
