created the resources manually

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,9 +5,6 @@ on:
     branches:
       - main
 
-env:
-  AZURE_LOCATION: "westus2"
-
 jobs:
   deploy-to-azure:
     runs-on: ubuntu-latest
@@ -34,41 +31,25 @@ jobs:
         with:
           creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-      - name: Get Repository Name
-        id: repo_name
-        run: echo "::set-output name=name::${{ github.event.repository.name }}"
-
-      - name: Create Azure Resource Group
-        id: create_resource_group
-        run: |
-          resourceGroupName="${{ steps.repo_name.outputs.name }}-resource-group"
-          az group create \
-            --name $resourceGroupName \
-            --location ${{ env.AZURE_LOCATION }}
-          echo "::set-output name=resource_group_name::$resourceGroupName"
-
       - name: Upload files to Azure Storage
         uses: Azure/CLI@v1
         with:
           azcliversion: latest
           inlineScript: |
-            az storage account create --name mfstorage --resource-group ${{ steps.create_resource_group.outputs.resource_group_name }} --location ${{ env.AZURE_LOCATION }} --sku Standard_LRS
-            az storage container create --account-name mfstorage --name mfcontainer --public-access blob
-            az storage blob upload-batch --account-name mfstorage --destination mfcontainer --source dist --output none --set-permission blob
+            az storage blob upload-batch --account-name microfrontendstorage1 --destination microfrontendcontainer1 --source dist --output none --set-permission blob
 
       - name: Configure CDN Endpoint
         uses: Azure/CLI@v1
         with:
           azcliversion: latest
           inlineScript: |
-            az cdn profile create -n ${{ steps.repo_name.outputs.name }}-cdn-profile -g ${{ steps.create_resource_group.outputs.resource_group_name }} --sku Standard_Microsoft
-            az cdn endpoint create -n ${{ steps.repo_name.outputs.name }}-cdn-endpoint -g ${{ steps.create_resource_group.outputs.resource_group_name }} --profile-name ${{ steps.repo_name.outputs.name }}-cdn-profile --origin ${{ steps.repo_name.outputs.name }}.blob.core.windows.net --origin-host-header ${{ steps.repo_name.outputs.name }}.blob.core.windows.net
+            az cdn endpoint create -n microfrontendcdnendpoint1 -g microfrontend1 --profile-name microfrontendcdn1 --origin microfrontendstorage1.blob.core.windows.net --origin-host-header microfrontendstorage1.blob.core.windows.net
 
       - name: Check CDN Endpoint Provisioning Status
         id: check_cdn_status
         run: |
           while true; do
-            status=$(az cdn endpoint show -n ${{ steps.repo_name.outputs.name }}-cdn-endpoint -g ${{ steps.create_resource_group.outputs.resource_group_name }} --query 'properties.provisioningState' -o tsv)
+            status=$(az cdn endpoint show -n microfrontendcdnendpoint1 -g microfrontend1 --query 'properties.provisioningState' -o tsv)
             if [ "$status" == "Succeeded" ]; then
               break
             fi
@@ -79,7 +60,7 @@ jobs:
       - name: Get CDN Endpoint URL
         id: get_cdn_url
         run: |
-          cdn_url=$(az cdn endpoint show -n ${{ steps.repo_name.outputs.name }}-cdn-endpoint -g ${{ steps.create_resource_group.outputs.resource_group_name }} --query 'hostName' -o tsv)
+          cdn_url=$(az cdn endpoint show -n microfrontendcdnendpoint1 -g microfrontend1 --query 'hostName' -o tsv)
           echo "::set-output name=cdn_url::$cdn_url"
           echo "CDN Endpoint URL: $cdn_url"
 
