--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,9 +60,15 @@ jobs:
       - name: Get CDN Endpoint URL
         id: get_cdn_url
         run: |
-          cdn_url=$(az cdn endpoint show -n microfrontendcdn1 -g microfrontend1 --query 'hostName' -o tsv)
-          echo "::set-output name=cdn_url::$cdn_url"
-          echo "CDN Endpoint URL: $cdn_url"
+          while true; do
+            status=$(az cdn endpoint show -n microfrontendcdnendpoint1 -g microfrontend1 --profile-name microfrontendcdn1 --query 'provisioningState' -o tsv)
+            if [ "$status" == "Succeeded" ]; then
+              break
+            fi
+            sleep 10
+          done
+          echo "CDN Endpoint provisioned successfully."
+
 
       - name: Update index.html URLs
         run: |
