--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,17 +45,17 @@ jobs:
           inlineScript: |
             az cdn endpoint create -n microfrontendcdnendpoint1 -g microfrontend1 --profile-name microfrontendcdn1 --origin microfrontendstorage1.blob.core.windows.net --origin-host-header microfrontendstorage1.blob.core.windows.net
 
-      - name: Check CDN Endpoint Provisioning Status
-        id: check_cdn_status
-        run: |
-          while true; do
-            status=$(az cdn endpoint show -n microfrontendcdnendpoint1 -g microfrontend1 --query 'properties.provisioningState' -o tsv)
-            if [ "$status" == "Succeeded" ]; then
-              break
-            fi
-            sleep 10
-          done
-          echo "CDN Endpoint provisioned successfully."
+      # - name: Check CDN Endpoint Provisioning Status
+      #   id: check_cdn_status
+      #   run: |
+      #     while true; do
+      #       status=$(az cdn endpoint show -n microfrontendcdnendpoint1 -g microfrontend1 --query 'properties.provisioningState' -o tsv)
+      #       if [ "$status" == "Succeeded" ]; then
+      #         break
+      #       fi
+      #       sleep 10
+      #     done
+      #     echo "CDN Endpoint provisioned successfully."
 
       - name: Get CDN Endpoint URL
         id: get_cdn_url
