--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -72,7 +72,8 @@ jobs:
 
       - name: Update index.html URLs
         run: |
-          run: sed -i "s|http://127.0.0.1:5500/dist/|${{ steps.get_cdn_url.outputs.cdn_url }}/|g" ./index.html
+          sed -i "s|http://127.0.0.1:5500/dist/|${{ steps.get_cdn_url.outputs.cdn_url }}/|g" ./index.html
+          
 
       - name: Test Deployment
         run: |
