--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -57,6 +57,11 @@ jobs:
       #     done
       #     echo "CDN Endpoint provisioned successfully."
 
+      - name: Purge CDN endpoint
+        uses: azure/CLI@v1
+        with:
+          inlineScript: |
+            az cdn endpoint purge --content-paths  "/*" --profile-name "microfrontendcdn1" --name "microfrontendcdnendpoint1" --resource-group "microfrontend1"
       - name: Get CDN Endpoint URL
         id: get_cdn_url
         run: |
