--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,7 +24,7 @@ jobs:
         run: npm install
 
       - name: Build the app
-        run: npm run build
+        run: npm run build:dev
 
       - name: Azure Login
         uses: azure/login@v1
