--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -36,14 +36,14 @@ jobs:
         with:
           azcliversion: latest
           inlineScript: |
-            az storage blob upload-batch --account-name frontendstorage1 --destination '$web' -s dist --overwrite
+            az storage blob upload-batch --account-name microfrontendgroup --destination '$web' -s dist --overwrite
 
 
       - name: Purge CDN endpoint
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az cdn endpoint purge --content-paths  "/*" --profile-name frontendcdn --name frontendpoint --resource-group microfrontend1
+            az cdn endpoint purge --content-paths  "/*" --profile-name microfrontendcdn --name microfrontendendpoint --resource-group microfrontend
             
 
     
@@ -51,7 +51,7 @@ jobs:
         id: get_cdn_url
         run: |
           while true; do
-            status=$(az cdn endpoint show -n frontendpoint -g microfrontend1 --profile-name frontendcdn --query 'provisioningState' -o tsv)
+            status=$(az cdn endpoint show -n microfrontendendpoint -g microfrontend --profile-name microfrontendcdn --query 'provisioningState' -o tsv)
             if [ "$status" == "Succeeded" ]; then
               break
             fi
