--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -43,7 +43,7 @@ jobs:
         uses: azure/CLI@v1
         with:
           inlineScript: |
-            az cdn endpoint purge --content-paths  "/*" --profile-name microfrontendcdn --name microfrontendendpoint --resource-group microfrontend
+            az cdn endpoint purge --content-paths "/*" --profile-name microfrontcdn --name microfrontendendpoint --resource-group microfrontend
             
 
     
