--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -20,11 +20,11 @@ jobs:
         with:
           node-version: 20
           
-      - name: Install dependencies
-        run: npm install
+      # - name: Install dependencies
+      #   run: npm install
 
-      - name: Build the app
-        run: npm run build:modernFa
+      # - name: Build the app
+      #   run: npm run build:modernFa
 
       - uses: azure/login@v1
         with:
