--- a/.github/workflows/pulumi.yml
+++ b/.github/workflows/pulumi.yml
@@ -29,8 +29,6 @@ jobs:
       - name: Upload files to Blob Container
         run: |
           az storage blob upload-batch \
-            --account-name ${{ secrets.AZURE_STORAGE_ACCOUNT }} \
-            --source ./dist \
-            --destination ${{ secrets.AZURE_CONTAINER }}
-        env:
-          AZURE_STORAGE_CONNECTION_STRING: ${{ secrets.AZURE_STORAGE_CONNECTION_STRING }}
+            --account-name staticwebstorage93235b22 \
+            --source ./dist/modern \
+            --destination container10814907b
