--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -24,14 +24,28 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run Trivy vulnerability scanner
+      - name: Run Trivy Vulnerability Scan (All Severities)
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: 'fs'
-          scan-ref: '.'
+          scanners: 'vuln,misconfig,secret,license'
+          severity: 'LOW,MEDIUM,HIGH,CRITICAL'
           format: 'table'
-          exit-code: '1'
-          severity: 'CRITICAL,HIGH'
-          vuln-type: 'os,library'
-          ignore-unfixed: false
-          scanners: 'vuln,config,secret,license'
+          output: 'trivy-results.txt'
+
+      - name: Fail on HIGH and CRITICAL vulnerabilities
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: 'fs'
+          scanners: 'vuln,misconfig,secret,license'
+          severity: 'HIGH,CRITICAL'
+          format: 'table'
+          exit-code: 1
+         
+          
+      - name: Upload Trivy Scan Results as Artifact
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: trivy-results-${{ matrix.language }}
+          path: trivy-results.txt
