--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -24,23 +24,17 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run Trivy Vulnerability Scan (All Severities)
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: 'fs'
-          scanners: 'vuln,misconfig,secret,license'
-          severity: 'LOW,MEDIUM,HIGH,CRITICAL'
+          scan-ref: '.'
           format: 'table'
-          output: 'trivy-results.txt'
-
-      - name: Fail on HIGH and CRITICAL vulnerabilities
-        uses: aquasecurity/trivy-action@0.28.0
-        with:
-          scan-type: 'fs'
-          scanners: 'vuln,misconfig,secret,license'
-          severity: 'HIGH,CRITICAL'
-          format: 'table'
-          exit-code: 1
+          exit-code: '1'
+          severity: 'CRITICAL,HIGH'
+          vuln-type: 'os,library'
+          ignore-unfixed: false
+          scanners: 'vuln,config,secret,license'
          
           
       - name: Upload Trivy Scan Results as Artifact
