--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -30,10 +30,9 @@ jobs:
           scan-type: 'fs'
           scan-ref: '.'
           format: 'table'
+          output: 'trivy-results.txt'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
-          vuln-type: 'os,library'
-          ignore-unfixed: false
           scanners: 'vuln,config,secret,license'
          
           
