--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -24,6 +24,15 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
+      - name: Run Trivy Vulnerability Scan (All Severities)
+        uses: aquasecurity/trivy-action@0.28.0
+        with:
+          scan-type: 'fs'
+          scanners: 'vuln,misconfig,secret,license'
+          severity: 'LOW,MEDIUM,HIGH,CRITICAL'
+          format: 'table'
+          output: 'trivy-results.txt'
+
       - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
@@ -32,9 +41,7 @@ jobs:
           format: 'table'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
-          scanners: 'vuln,config,secret,license'
-          output: 'trivy-results.txt'
-         
+          scanners: 'vuln,config,secret,license'   
           
       - name: Upload Trivy Scan Results as Artifact
         if: always()
