--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -29,7 +29,8 @@ jobs:
         with:
           scan-type: 'fs'
           scan-ref: '.'
-          format: 'table'
+          format: 'json'
+          output: 'trivy-results.json'
           exit-code: '1'
           severity: 'CRITICAL,HIGH'
           scanners: 'vuln,config,secret,license'   
@@ -39,4 +40,4 @@ jobs:
         uses: actions/upload-artifact@v4
         with:
           name: trivy-results-${{ matrix.language }}
-          path: trivy-results.txt
+          path: trivy-results.json
