--- a/.github/workflows/trivy.yml
+++ b/.github/workflows/trivy.yml
@@ -1,3 +1,4 @@
+
 name: Trivy code scan
 
 on:
@@ -24,21 +25,19 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Run Trivy Vulnerability Scan (All Severities)
+      - name: Run Trivy vulnerability scanner
         uses: aquasecurity/trivy-action@0.28.0
         with:
           scan-type: 'fs'
-          scanners: 'vuln,misconfig,secret,license'
-          severity: 'LOW,MEDIUM,HIGH,CRITICAL'
-          format: 'table'
-          output: 'trivy-results.txt'
-
-      - name: Run Trivy Full Scan (Console Output)
-        run: trivy fs --scanners vuln,config,secret,license --format table --severity CRITICAL,HIGH .   
+          format: 'json'
+          output: 'trivy-results.json'
+          exit-code: '1'
+          severity: 'CRITICAL,HIGH'
+          scanners: 'vuln,config,secret,license'   
           
       - name: Upload Trivy Scan Results as Artifact
         if: always()
         uses: actions/upload-artifact@v4
         with:
           name: trivy-results-${{ matrix.language }}
-          path: trivy-results.txt
+          path: trivy-results.json
